[metadata]
name = deepClassifier
version = 0.1.0
author = Syed-Mansoor
author_email = saeedmansoor56@example.com
description = A small package for deep learning classifier.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/yourusername/deepClassifier
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    ensure==1.0.2
python_requires = >=3.8

[options.extras_require]
testing =
    pytest>=7.1.3
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1
    black>=22.8.0

[options.package_data]
deepClassifier = py.typed

[flake8]
max-line-length = 160
exclude = __init__.py

[tool:pytest]
addopts = --doctest-modules
testpaths = tests

[mypy]
files = deepClassifier
ignore_missing_imports = true

[tox:tox]
envlist = py38, py39, py310
isolated_build = True
